+ add email input + add tel input + add html5 attributes (required, + add multiupload support + add runtime properties * fix exceptions names * fix tests

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -5,12 +5,12 @@
       <directory>tests</directory>
     </testsuite>
   </testsuites>
-  <filter>
+  <!--filter>
     <whitelist processUncoveredFilesFromWhitelist="true">
       <directory suffix=".php">HTML</directory>
     </whitelist>
   </filter>
-  <!--logging>
+  <logging>
     <log type="coverage-html" target="/tmp/report" lowUpperBound="35" highLowerBound="70" />
   </logging-->
 </phpunit>
